test: only run on London